--- a/src/styles/pagesstyles/section3.css
+++ b/src/styles/pagesstyles/section3.css
@@ -1,5 +1,5 @@
 .section3 {
-  min-height: 2160px;
+  min-height: 1732px;
   width: 100%;
 }
 
@@ -22,7 +22,6 @@
 .section3-cat ul {
   display: flex;
   font-size: clamp(10px, 28px, 28px);
-  cursor: pointer;
   justify-content: space-around;
   width: 100%;
 }
@@ -35,6 +34,8 @@
 .section3-cat a {
   text-decoration: none;
   color: black;
+  cursor: pointer;
+  padding: 10px 10px;
 }
 
 .section3-prods-wrapper {
@@ -62,12 +63,13 @@
 }
 
 .section3-prod-foot p {
-  font-size: 1.2rem;
+  font-size: 26px;
   padding: 0 20px;
 }
 
 .section3-prod-foot-star {
-  color: rgb(226, 226, 81);
+  color: #eec800;
+  font-size: 26px;
 }
 
 /* xs */
